# 2wm

./: 2wm.c  2wm.cpp  2wm.sh.in  CMakeLists.txt  README.md
debian/: changelog  control  copyright
